# react2shell

./: .gitignore  README.md  interactive.py  pyproject.toml  requirements.txt
